<resources>
    <string name="app_name">Style Optics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">--------------------------  or  --------------------------</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="cart">Cart</string>
    <string name="message">Message</string>
    <string name="account">Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">No Account ?</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="recover">Recover</string>
    <string name="email_phone">Email / Phone</string>
    <string name="recover_password">Recover Password</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="complete_address">Complete Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="moon_optics">Moon Optics</string>
    <string name="todo">TODO</string>
</resources>
