<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerframeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DF000000"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/rvRl"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:src="@drawable/ic_close_white"
            android:tint="#F30E0E"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/moonOpticsITv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:fontFamily="@font/styleoptics"
            android:gravity="center"
            android:text="@string/moon_optics"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_email_white"
                android:drawablePadding="8dp"
                android:drawableTint="@color/sky"
                android:layout_margin="5dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/green"
                android:drawableStart="@drawable/ic_email_white"
                tools:targetApi="m"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIl"
            app:passwordToggleEnabled="true"
            app:passwordToggleTintMode="screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_below="@id/textIl1">

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawablePadding="8dp"
                android:drawableTint="@color/sky"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:textColor="@color/green"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock_white"
                android:drawableLeft="@drawable/ic_lock_white"
                android:autofillHints=""
                tools:targetApi="m" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forgotTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:layout_below="@id/textIl"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/forgotTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="20sp"
            android:textColor="@color/sky"
            android:layout_below="@id/loginBtn"
            android:gravity="center"
            android:layout_marginTop="80dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginBtn"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/no_account"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/noAccountTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/sky"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>


    </RelativeLayout>


</FrameLayout>