<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DF000000"
    tools:context=".ForgotPasswordActivity">

    <!-- ToolBar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@drawable/shape_rect01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_white"
            android:tint="@color/red"
            android:background="@null"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/recover_password"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/toolbarRl"
        android:background="@drawable/shape_rect01"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_email_white"
        android:drawablePadding="8dp"
        android:drawableTint="@color/sky"
        android:hint="@string/email_phone"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/green"
        android:importantForAutofill="no"
        tools:targetApi="m"
        android:drawableStart="@drawable/ic_email_white" />

    <Button
        android:id="@+id/recoverBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/recover"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"/>


</RelativeLayout>