<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerframeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DF000000"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/rvRl"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:src="@drawable/ic_close_white"
            android:tint="#F30E0E"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/gpsBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:src="@drawable/ic_gps_white"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/moonOpticsITv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:fontFamily="@font/styleoptics"
            android:gravity="center"
            android:text="@string/moon_optics"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp">

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_rect01"
            android:drawableLeft="@drawable/ic_person_white"
            android:drawableTint="@color/sky"
            android:drawablePadding="5dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/green"
            tools:targetApi="m"
            android:drawableStart="@drawable/ic_person_white"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameEt"
            android:background="@drawable/shape_rect01"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/ic_email_white"
            android:drawablePadding="8dp"
            android:drawableTint="@color/sky"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/green"
            tools:targetApi="m"
            android:drawableStart="@drawable/ic_email_white"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/phoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailEt"
            android:background="@drawable/shape_rect01"
            android:drawableTint="@color/sky"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/ic_phone_white"
            android:drawablePadding="5dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/green"
            android:drawableStart="@drawable/ic_phone_white"
            tools:targetApi="m"
            android:importantForAutofill="no" />

        <LinearLayout
            android:id="@+id/addressLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneEt"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/countryEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect01"
                android:drawableLeft="@drawable/ic_home_white"
                android:drawableTint="@color/sky"
                android:drawablePadding="5dp"
                android:hint="@string/country"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:textColor="@color/green"
                android:importantForAutofill="no"
                android:drawableStart="@drawable/ic_home_white"
                tools:targetApi="m" />

            <EditText
                android:id="@+id/stateEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect01"
                android:drawableLeft="@drawable/ic_map_white"
                android:drawableTint="@color/sky"
                android:drawablePadding="5dp"
                android:hint="@string/state"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:textColor="@color/green"
                android:importantForAutofill="no"
                tools:targetApi="m"
                android:drawableStart="@drawable/ic_map_white" />

            <EditText
                android:id="@+id/cityEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect01"
                android:drawableLeft="@drawable/ic_city_white"
                android:drawableTint="@color/sky"
                android:drawablePadding="5dp"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:textColor="@color/green"
                tools:targetApi="m"
                android:drawableStart="@drawable/ic_city_white"
                android:importantForAutofill="no" />

        </LinearLayout>

        <EditText
            android:id="@+id/addressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressLL"
            android:layout_margin="5dp"
            android:background="@drawable/shape_rect01"
            android:drawablePadding="5dp"
            android:hint="@string/complete_address"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:textColor="@color/green"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_lock_white"
            android:drawableTint="@color/sky"
            android:layout_margin="5dp"
            android:inputType="textPassword"
            android:background="@drawable/shape_rect01"
            android:layout_below="@id/addressEt"
            android:textColor="@color/green"
            tools:targetApi="m"
            android:drawableStart="@drawable/ic_lock_white"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/cPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:padding="10dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_lock_white"
            android:drawableTint="@color/sky"
            android:layout_margin="5dp"
            android:inputType="textPassword"
            android:background="@drawable/shape_rect01"
            android:layout_below="@id/passwordEt"
            android:textColor="@color/green"
            tools:targetApi="m"
            android:drawableStart="@drawable/ic_lock_white"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/registerBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/cPasswordEt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </RelativeLayout>


</FrameLayout>